# engineer-salary-prediction

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
engineer_salary_prediction/: __init__.py  classes.py  config.py  dataset.py  features.py  plots.py
engineer_salary_prediction/modeling/: predict.py  train.py
notebooks/: notebook_1.ipynb
